Fix Spacing/gaps; added footer
fixed spacing on hero home, paragraphs on membership page, added footer

--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body {
     margin: 0;
 }
 
+footer {
+  background-color: rgb(227, 215, 212);
+  padding: 20px;
+  text-align: center;
+}
+
 h1 {
     font-family: "Inknut Antiqua", serif;
     font-weight: 400;
@@ -36,7 +42,6 @@ p, ol {
     font-family: "Cormorant Garamond", serif;
     font-weight: 500;
     font-style: normal;
-    max-width: 460px;
     line-height: 200%;
     margin: 20px;
 }
@@ -59,18 +64,28 @@ li {
     text-align: center;
 }
 
+
 .center-toptext {
     padding: 40px;
+    max-width: 900px;
+    margin-inline: auto;
+    text-align: left;
 }
 
 
 
-.container {
+.container-home {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding: 20px;
+    padding: 2px 20px;
    }
+
+
+.text-home {
+  max-width: 460px;
+
+}
    
 .image {
     max-width: 100%;
@@ -80,13 +95,23 @@ li {
    
 
 .bottom-homepage {
-    padding: 10px 20px 100px 20px;
+    padding: 100px 20px 100px 20px;
+    max-width: 700px;
+    margin-inline: auto;
+
 }
 
 
+.benefit-text > h2 {
+  text-align: center;
+  font-size: 45px;
+  padding: 20px 50px 0px ;
+}
 
-
-
+.consult-rose > h2 {
+  padding-top: 150px;
+  font-size: 45px;
+}
    
 
 
@@ -179,9 +204,10 @@ li {
     text-align: center;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 77%;
     transform: translate(-50%, -50%);
     color: white;
+    width: 500px;
   }
   
   .hero-texthome button {
@@ -215,7 +241,7 @@ li {
 
   /* rose care hero image */
 .hero-image-rosecare {
-    background-image: linear-gradient(rgba(255, 244, 241, 0),rgba(255, 244, 241, 0.674), rgba(255, 244, 241, 1)), url("assests/rose-care-hero.png");
+    background-image: linear-gradient(rgba(255, 244, 241, 0.042), rgba(255, 244, 241, 1)), url("assests/rose-care-hero.png");
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
@@ -245,12 +271,12 @@ li {
 
   /* membership hero image */
   .hero-image-member {
-    background-image: linear-gradient(rgba(64, 28, 20, 1), rgba(64, 28, 20, 0.741), rgba(64, 28, 20, 0)), url("assests/membership-fotos/membership-hero.png");
-    height: 20vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assests/membership-fotos/membership-hero.png");
+      height: 20vh;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
   }
   
   .hero-text-member {
@@ -260,7 +286,10 @@ li {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    
+  }
+
+  .hero-text-member > h1 {
+    line-height: 60px;
   }
 
   /* (above) membership hero image */
@@ -268,7 +297,9 @@ li {
 
 
   .consult-rose {
-    p{font-size: 15px; }
+    p{font-size: 15px; 
+    text-align: center;
+    }
     
   }
 
